turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:7: error: not found: value step
			step();
                        ^